[package]
name = "playlist-fixer"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
shellexpand = "3.1.0"
unicode-bom = "2.0.2"
